--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="og:title" content="Little Lemon Booking Page"/>
-    <meta name="description" content="Little Lemon Booking Page"/>
+    <meta name="og:title" content="Jbygg Oy"/>
+    <meta name="description" content="Jbygg Oy"/>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rakennus- ja kaivuutyöt Jbygg Oy"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/jbygg_transparent.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <title>Little Lemon Table Booking</title>
+    <title>Jbygg</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
